--- a/styles/global.css
+++ b/styles/global.css
@@ -79,4 +79,9 @@ button {
   --default-white: #fff;
   --default-blue: #0000ff;
   --default-red: #ff0000;
+  --main-purple-color: #5a1cdf;
+  --sub-purple-color: #c3adf3;
+  --green-to-income: #4aa76f;
+  --red-to-expense: #e44242;
+  --secondary-gray: #dfdde4;
 }
