--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -93,7 +93,6 @@ main {
 section {
   width: -webkit-fill-available;
   width: 100%;
-  max-width: 500px;
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -105,6 +104,15 @@ section {
   padding: 48px 40px;
   border-radius: 24px;
   box-shadow: 5px 5px 10px #ccc3dc;
+}
+
+.transTitle {
+  color: var(--sub-purple-color);
+  font-weight: 500;
+}
+
+.current-box h1 {
+  font-size: 3rem;
 }
 
 .monthlyExpense {
@@ -150,49 +158,49 @@ section {
   border-top: thin solid var(--sub-purple-color);
 }
 
-.transactionList {
+table {
+  table-layout: fixed;
   width: 100%;
-  height: auto;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
 }
 
-.transaction {
-  display: flex;
-  width: 100%;
-  /* justify-content: space-between; */
-  gap: 20px;
-  align-items: center;
+tr {
+  margin-bottom: 10px;
+  text-align: center;
 }
 
-.transaction .dot {
+tbody tr {
+  width: 100%;
+}
+
+th:first-child {
+  width: 24px;
+}
+
+tbody tr td:first-child {
+  display: flex;
   width: 24px;
   height: 24px;
   aspect-ratio: 1;
   border-radius: 100%;
+  overflow: hidden;
 }
 
-.transaction.transIncome .dot {
+tbody tr.transIncome td:first-child {
   background-color: var(--green-to-income);
 }
-.transaction.transExpense .dot {
+tbody tr.transExpense td:first-child {
   background-color: var(--red-to-expense);
-}
-
-.transDate {
-  width: 80px;
-}
-.transContentList {
-  width: calc(100% - 24px - 160px - 12px);
-}
-
-.transCost {
-  width: 80px;
 }
 
 .chartArea,
 .categoriesChart {
   height: 100%;
+}
+
+input {
+  color: #000;
+}
+
+#mobileBottom {
+  display: none;
 }
