--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -69,7 +69,7 @@ header {
   /* gap: 10px; */
 }
 
-.menu svg {
+.menu img {
   width: 40px;
   margin-right: 10px;
 }
@@ -203,4 +203,14 @@ input {
 
 #mobileBottom {
   display: none;
+}
+
+/* inputForm */
+#inputForm {
+  width: 100%;
+  display: flex;
+}
+
+button {
+  color: #000;
 }
