--- a/pages/expense-list/style.css
+++ b/pages/expense-list/style.css
@@ -1,3 +1,10 @@
+#transactionTable {
+  overflow-y: auto;
+  scrollbar-width: none;
+
+  padding: 0.1rem;
+}
+
 .expense-list-container {
   gap: 2rem;
 
