--- a/pages/UserInfo/user-info.css
+++ b/pages/UserInfo/user-info.css
@@ -59,10 +59,53 @@ tr:nth-child(even) {
     vertical-align: middle;
 }
 
+.form-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 300px;
+    text-align: center;
+}
+
+h2 {
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+}
+
+button {
+    background-color: #28a745;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    width: 100%;
+}
+
+button:hover {
+    background-color: #218838;
+}
+
 /* Stile per schermi piccoli (mobile) */
 @media only screen and (max-width: 600px) {
     .wrap {
         flex-direction: column;
-        height: 50%;
+        height: 100%;
     }
 }
