--- a/components/header.html
+++ b/components/header.html
@@ -13,7 +13,7 @@
     <div class="user-info">
       <a href="/pages/UserInfo/index.html">
         <img src="/img/undraw_profile.svg" alt="undraw_profile" />
-        <h3>User Name</h3>
+        <h3 id="user-name">Name</h3>
       </a>
     </div>
 
