--- a/components/header.html
+++ b/components/header.html
@@ -21,7 +21,7 @@
       <div class="menu">
         <a href="/index.html">
           <img src="/img/Dashboard-icon.svg" alt="Dashboard-icon" />
-          <h3 class="active">Dashboard</h3>
+          <h3>Dashboard</h3>
         </a>
       </div>
       <div class="menu">
