--- a/pages/expense-list/style.css
+++ b/pages/expense-list/style.css
@@ -103,6 +103,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
 
   padding: 1rem;
   margin-bottom: 1rem;
@@ -116,6 +117,7 @@
 
   .left-side {
     display: grid;
+    flex-grow: 1;
     grid-template-columns: 5rem auto 10rem;
     align-items: center;
     width: 100%;
@@ -132,6 +134,9 @@
       gap: 2rem;
 
       .title-container {
+        flex-grow: 1;
+        overflow-wrap: break-word;
+        white-space: normal;
         .date {
           font-size: 1.2rem;
         }
@@ -139,6 +144,9 @@
 
       .description {
         font-size: 1.3rem;
+        flex-grow: 1;
+        overflow-wrap: break-word;
+        white-space: normal;
       }
     }
 
@@ -159,6 +167,7 @@
     display: flex;
     align-items: center;
     gap: 2rem;
+    flex-shrink: 0;
   }
 }
 
@@ -173,6 +182,10 @@
         width: 2.5rem;
         height: 2.5rem;
         margin: 0;
+      }
+
+      .content-container {
+        gap: 1rem;
       }
     }
     .option-btn {
