--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   gap: 4rem;
   margin: 0 auto;
-  border-radius: 20;
+  border-radius: 20px;
   overflow: auto;
 }
 
@@ -25,6 +25,7 @@ main {
   gap: 80px;
   padding: 24px 40px;
   overflow-y: auto;
+  scrollbar-width: none;
 }
 
 header,
@@ -96,11 +97,29 @@ section {
   gap: 4rem;
 }
 
-#currentMonth {
-  font-size: 4rem;
+#currentMonthSelect {
+  font-size: 3rem;
   margin-left: 0.5rem;
   font-family: "Coustard", serif;
   border-bottom: thin solid var(--main-purple-color);
+  background-color: transparent;
+  border: none;
+  color: var(--main-purple-color);
+  font-weight: bold;
+  padding: 0;
+
+  appearance: none;
+  background-image: url(/img/Polygon.svg);
+  background-repeat: no-repeat;
+  background-position: right 1rem center;
+  padding-right: 30px;
+  background-size: 1.8rem;
+  cursor: pointer;
+}
+
+#currentMonthSelect option {
+  font-size: 1rem;
+  padding: 10px;
 }
 
 .current-box {
@@ -109,15 +128,20 @@ section {
   padding: 48px 40px;
   border-radius: 24px;
   box-shadow: 5px 5px 10px #ccc3dc;
+
+  .transTitle {
+    font-size: 1.8rem;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
 }
 
 .transTitle {
   color: var(--sub-purple-color);
-  font-weight: 500;
-}
-
-.current-box h1 {
-  font-size: 3rem;
+  font-weight: 700;
+  font-size: 1.3rem;
 }
 
 .monthlyExpense {
