--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -68,7 +68,7 @@ header {
   width: 50%;
 }
 
-.menu>a {
+.menu > a {
   display: flex;
   align-items: center;
   /* gap: 10px; */
@@ -135,6 +135,32 @@ section {
 
   h1 {
     font-size: 3rem;
+  }
+
+  .limit-area {
+    width: 100%;
+
+    .monthly-limit {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      font-size: 1.2rem;
+      font-weight: bold;
+      margin: 2rem 0 1rem 0;
+    }
+
+    .limitVar-area {
+      width: 100%;
+      height: 2rem;
+      border-radius: 2rem;
+      background-color: var(--secondary-gray);
+
+      .limit-fill {
+        height: 100%;
+        border-radius: 2rem;
+        background-color: var(--main-purple-color);
+      }
+    }
   }
 }
 
