--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -149,7 +149,7 @@ section {
       margin: 2rem 0 1rem 0;
     }
 
-    .limitVar-area {
+    .limitBar-area {
       width: 100%;
       height: 2rem;
       border-radius: 2rem;
