[chore] Edit UI

--- a/components/header.html
+++ b/components/header.html
@@ -12,7 +12,11 @@
     </label>
     <div class="user-info">
       <a href="/pages/UserInfo/index.html">
-        <img src="/img/undraw_profile.svg" alt="undraw_profile" />
+        <img
+          src="/img/undraw_profile.svg"
+          alt="undraw_profile"
+          id="user-image"
+        />
         <h3 id="user-name">Name</h3>
       </a>
     </div>
