refeat: total progress bar

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -157,6 +157,7 @@ section {
 
       .limit-fill {
         height: 100%;
+        max-width: 100%;
         border-radius: 2rem;
         background-color: var(--main-purple-color);
       }
