--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -7,6 +7,9 @@
   tbody tr td:first-child {
     width: 18px;
     height: 18px;
+    display: flex;
+    justify-content: center;
+    padding: 0;
   }
 
   canvas {
